--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
           <h2 class="fw-normal">Education</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2015</div>
+              <div class="title">2021</div>
               <div class="details">
-                <h5>Diploma in Computer Science</h5>
-                <small class="fg-theme">Sri Ramakrishna Polytechnic College, Coimbatore, India.</small>
-                <p>CGPA: 8</p>
+                <h5>Data Analytics and Business Decision Making</h5>
+                <small class="fg-theme">Durham College, Oshawa, Ontario, Canada</small>
+                <p><b><i>**Still Pursuing</i></b></p>
               </div>
             </li>
             <li>
@@ -203,15 +203,15 @@
               <div class="details">
                 <h5>Bachelors of Computer Science Engineering</h5>
                 <small class="fg-theme">Sri Ramakrishna Engineering College, Coimbatore, India.</small>
-                <p>CGPA: 7</p>
+                <p><b>CGPA: 7</b></p>
               </div>
             </li>
             <li>
-              <div class="title">2021</div>
+              <div class="title">2015</div>
               <div class="details">
-                <h5>Data Analytics and Business Decision Making</h5>
-                <small class="fg-theme">Durham College, Oshawa, Ontario, Canada</small>
-                <p>Still Pursuing</p>
+                <h5>Diploma in Computer Science</h5>
+                <small class="fg-theme">Sri Ramakrishna Polytechnic College, Coimbatore, India.</small>
+                <p><b>CGPA: 8</b>></p>
               </div>
             </li>
           </ul>
