--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               <div class="details">
                 <h5>Diploma in Computer Science</h5>
                 <small class="fg-theme">Sri Ramakrishna Polytechnic College, Coimbatore, India.</small>
-                <p><b>CGPA: 8</b>></p>
+                <p><b>CGPA: 8</b></p>
               </div>
             </li>
           </ul>
