update on contact info

--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
               <div class="details">
                 <h5>Freelance Data Scientist</h5>
                 <small class="fg-theme">Fiverr</small>
+                <div>
+                  <p>Data Analytics, data analysis and visualisation projects - $100/day </p>
+                  <p>Presentations, training and workshops - starting from $70/day </p>
+                  <p>Collaboration and long-term projects - $25/hour</p>
+                </div>
               </div>
             </li>
           </ul>
@@ -502,7 +507,8 @@
   
   <!-- Footer -->
   <div class="vg-footer">
-    <h1 class="text-center">As a data specialist, I understand how to make the most of data in your company.</h1>
+    <!-- <h3 class="text-center">As a data specialist, I understand how to make the most of data in your company.</h3> -->
+    <h3 class="text-center">Contact me for more details on rates for the projects.</h3>
     <div class="container">
       <div class="row">
         <div class="col-lg-4 py-3">
