--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       <div class="text-center wow fadeInUp">
         <div class="badge badge-subhead">Services</div>
       </div>
-      <h1 class="fw-normal text-center wow fadeInUp">As a freelancer I work in..</h1>
+      <h1 class="fw-normal text-center wow fadeInUp">As a freelancer I provide services such as..</h1>
       <div class="row mt-5">
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
